syntax = "proto3";
package com.hr.pb;
option java_package = "com.hr.pb";
option java_outer_classname = "Util";

message Pageable{
 int32 firstResult = 1;//记录开始位置
 int32 resultSize = 2;//查询条数
 int32 resultCount = 3;//记录总数
}

message PBErrorMessage {
 string value = 1;
}

message PBMessage {
oneof value {
    string stringValue = 1;
    int32 intValue = 2;
    bool boolValue = 3;
}
}

message PBSubmitResult {
bool success=1;//是否成功
string error = 2;//错误消息
}

enum PBHttpState
{
NullError=0;//成功
Success=200;//成功
Error=400;//失败
Authroize=201;//授权
AuthroizeFail=202;//授权失败
RuntimeException=600;
ExistError=601;//存在性错误
VaildError=602;//客户端数据无法验证
}
